@@ -1,5 +1,5 @@
 [tox]
-envlist = pypy, py26, py27, py33, py34
+envlist = pypy, py27, py33, py34
 
 [testenv]
 usedevelop = True
@@ -7,7 +7,6 @@ deps =
     crate[test] >= 0.13.2
     prompt-toolkit
     zope.testrunner
-    py26: argparse
     colorama
 commands =
     zope-testrunner -c --test-path=src
