@@ -5,6 +5,8 @@ Changes for crash
 Unreleased
 ==========
 
+ - Dropped Python 2.6 support
+
  - Added support for client certificates
 
  - It is now possible to disable autocompletion using ``--no-autocomplete``
